# new-task

./: Docker  myfile.txt  pyproject.toml  requirements.txt  sample_notes.py
.github/workflows/: Dockerfile  artifactory.yml  aws_secrets.yml  cache.yml  cache1.yml  ci.yml  common_workflow.yml  conditions.yml  example.yml  github.env.yml  log.json  main_workflow.yml  matrix.yml  parallel.yml  parallel1.yml  parametrized .yml  pytest_results_with_artifactory.yml  sample.yml  secrets.yml  sequential.yml  sequential1.yml  test_in_docker_container.yml
automation/data/: common_data.py  data.py
automation/practise_pages/add_remove_page/: add_remove_elements.py  add_remove_locators.py
automation/practise_pages/drop_down_page/: drop_down.py  drop_down_locators.py
automation/practise_pages/forgot_page/: forget_page.py  forgot_page_locators.py
automation/practise_pages/form_validation_page/: form_validation.py  form_validation_locators.py
automation/practise_pages/login_page/: login_locators.py  login_page.py
automation/practise_pages/radio_buttons_page/: radio_buttons.py  radio_buttons_locators.py
automation/practise_pages/search_page/: locators.py  search_page_test.py
automation/practise_pages/web_inputs_page/: web_inputs.py  web_inputs_page_locators.py
automation/tests/: conftest.py  dummy_file.txt  test_checkbox.py  test_search_page.py
automation/tests/add_or_remove_detalis_test/: add_or_remove_test.py
automation/tests/drop_down_test_details/: drop_down_test.py
automation/tests/forgot_page_test_details/: forgot_page_mv_test.py  forgot_password_test.py
(+6 files in other folders)
