[tool.poetry]
name = "new_task"
version = "0.1.0"
description = "work"
authors = ["jyo-27 <jyo2702123@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
certifi = "2024.6.2"
charset-normalizer = "3.3.2"
colorama = "0.4.6"
greenlet = "^3.1.1"
idna = "3.7"
iniconfig = "2.0.0"
loguru = "0.7.2"
packaging = "24.0"
playwright = "1.50.0"  
pluggy = "1.5.0"
pyee = "^12.0"  
requests = "2.32.3"
text-unidecode = "1.3"
typing-extensions = "4.12.1"
urllib3 = "2.2.1"
win32-setctime = "1.1.0"
python-slugify = "8.0.4"

# [tool.poetry.dev-dependencies]
pytest = "8.2.2"
pytest-base-url = "2.1.0"
pytest-playwright = "0.7.0"

